- The AssemblyCopyright attribute in AssemblyInfo.cs is now filled in automatically with the current user and year.
- Switched from gulp-scsss-lint to gulp-sass-lint because it does not require Ruby to be installed.
- Added a Target Framework feature selector, so that you can choose from .NET Core, .NET Framework or both.
- Build Gulp tasks no longer clean as a pre-requisite.
- BSON formatter removed until Microsoft adds support.
- The Glimpse feature has been hidden and turned off by default until it supports RC2.
- Pre-compiled views have been removed because Microsoft removed support in RC2.

Version 2.18.1
MVC 6
- Removed some commented out code relating to Elmah and trace.axd which is not relevant in MVC 6.
- Added a '~' at the beginning of all URL's to local resources.

Version 2.18.0
- Fixed SitemapGenerator bug https://github.com/RehanSaeed/ASP.NET-MVC-Boilerplate/issues/96.
- Boilerplate.Web.Mvc NuGet packages updated for the above change.
MVC 5
- jQuery updated NuGet package updated from 2.2.0 to 2.2.3. ContentDeliveryNetwork.cs and packages.config updated.
- jQuery.validate NuGet package updated from 1.14.0 to 1.15.0. ContentDeliveryNetwork.cs and packages.config updated.
- Newtonsoft.Json NuGet package updated from 8.0.2 to 8.0.3.
- Font Awesome NuGet package updated from 4.2.0 to 4.5.0.
MVC 6
- jQuery updated NuGet Bower updated from 2.2.2 to 2.2.3. ContentDeliveryNetwork.cs and bower.json updated.
- Font Awesome NuGet Bower updated from 4.6.1 to 4.6.3. ContentDeliveryNetwork.cs and bower.json updated.
- jQuery.validate.unobtrusive Bower package updated from 3.2.5 to 3.2.6. ContentDeliveryNetwork.cs and bower.json
updated.
- sinon Bower package updated from 1.17.3 to 1.17.4. ContentDeliveryNetwork.cs and bower.json updated.
- Updated several NPM packages in package.json.
- applicationinsights-js added to bower.json and application-insights.js removed from scripts. gulpfile.js changed to
use the source of the application insights js file.
